package test

import (
	"fmt"
	"status-server/protobuffer_def"
	"status-server/redis"
)

func Test() {
	//注册状态
	fmt.Println(redis.RegisterStatus2(&protobuffer_def.RegisterStatusRequest{Identity:"333", DeviceType:[]byte{1},NextHeartbeatInterval:2000,RegisterInfo:"22222222"}))
	fmt.Println(redis.QueryStatus(&protobuffer_def.QueryStatusRequest{Identity:"333",}))
}
